# proto-nmea

./: .gitignore  CMakeLists.txt  README.md
include/proto_nmea/: Errors.h  errors.h
include/proto_nmea/etc/checksum/: ChecksumCalculator.h  ChecksumValueComparator.h
include/proto_nmea/format/: ChecksumValidator.h  FormatChecker.h  ProtocolFormat.h
include/proto_nmea/format/checksum/: ChecksumFormatValidator.h  ChecksumValidator.h  ChecksumValueComparator.h  MessageChecksumValidator.h
include/proto_nmea/format_checker/: formatChecker.h
include/proto_nmea/utility/: ChecksumUtils.h  GlobalUtils.h  HexUtils.h  StringUtils.h
src/: CMakeLists.txt
src/etc/checksum/: ChecksumCalculator.c  ChecksumValueComparator.c
src/format/: ChecksumValidator.c  FormatChecker.c
src/format/checksum/: ChecksumFormatValidator.c  ChecksumValidator.c  ChecksumValueComparator.c  MessageChecksumValidator.c
src/format_checker/: FormatChecker.c  formatChecker.c
src/utility/: ChecksumUtils.c  GlobalUtils.c  HexUtils.c  HexUtilsPerfOp.c
test/: CMakeLists.txt  test_main.cpp
test/dependencies/: fff.h
test/etc/checksum/: ChecksumCalculatorTests.cpp  ChecksumValueComparatorTests.cpp
test/etc/checksum/fakes/: ChecksumValueComparatorFakes.c  ChecksumXORCalculatorFakes.c  ChecksumXORCalculatorFakes.h
test/format/: ChecksumFormatValidatorTests.cpp  ChecksumValidatorTests.cpp  FormatCheckerTests.cpp  MessageChecksumValidatorTests.cpp
test/format-checker/: FormatCheckerTests.cpp  format-check-tests.cpp
test/format/fakes/: ChecksumFormatValidatorFakes.c  ChecksumValidatorFakes.c  ChecksumValidatorFakes.h  ChecksumValueComparatorFakes.h
test/include/proto_nmea_test/fakes/: FakeUtils.h
test/include/proto_nmea_test/fakes/format/: ChecksumFormatValidatorFakes.h  ChecksumValidatorFakes.h
test/src/: test_main.cpp
test/src/etc/checksum/: ChecksumCalculatorTests.cpp  ChecksumValueComparatorTests.cpp
test/src/etc/checksum/fakes/: ChecksumValueComparatorFakes.c  ChecksumXORCalculatorFakes.c
test/src/format/: ChecksumFormatValidatorTests.cpp  FormatCheckerTests.cpp  MessageChecksumValidatorTests.cpp
test/src/format/fakes/: ChecksumFormatValidatorFakes.c  ChecksumValidatorFakes.c
test/src/utility/: HexUtilsPerfOpTests.cpp
test/utility/: CatchSmartInclude.hpp  TypeConversionUtils.cpp  TypeConversionUtils.hpp
